# just_ops

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_main.py
