[project]
name = "just-ops"
version = "0.1.0"
description = ""
authors = [
    {name = "Y.Aidani",email = "aidani8youssef@gmail.com"}
]

requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
